[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://UI/TextureProgress.gd" type="Script" id=2]
[ext_resource path="res://UI/bar.png" type="Texture" id=3]

[sub_resource type="Animation" id=2]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -7 ), Vector2( 8, -7 ), Vector2( 4, -7 ), Vector2( 0, -7 ), Vector2( 4, -7 ) ]
}

[node name="HUD" type="Control"]
margin_left = 4.0
margin_top = -7.0
margin_right = 12.0
margin_bottom = -5.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
COLOR = Color( 1, 1, 1, 1 )

[node name="TweenColor" type="Tween" parent="TextureProgress"]

[node name="TweenProgress" type="Tween" parent="TextureProgress"]

[node name="ShakeTimer" type="Timer" parent="TextureProgress"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shake = SubResource( 2 )
[connection signal="tween_completed" from="TextureProgress/TweenColor" to="TextureProgress" method="_on_TweenColor_tween_completed"]
